--- a/hola.html
+++ b/hola.html
@@ -1,1 +1,11 @@
-<html><h1>dfg</h1></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liga Estratega</title>
+</head>
+<body>
+    
+</body>
+</html>
