--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>League Of Stats</title>
+    <link rel="shortcut icon" href="/multimedia/iconos/icono jinx papuda.jpg" type="image/x-icon">
 </head>
 <body>
 
