--- a/Paginas/champions.html
+++ b/Paginas/champions.html
@@ -5,26 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Champions</title>
     <link rel="shortcut icon" href="/multimedia/iconos/icono jinx papuda.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 
 
 <body class="body_champions">
 
     <header class="header_champs">
-            <img src="/multimedia/iconos/icono jinx papuda.jpg" alt="icono del nav">
+        <div class="header_image"></div>
+            <img src="/multimedia/iconos/Smile.ico.jpg" alt="icono del nav">
             <nav class="nav_general">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/Paginas/champions.html">Champs</a></li>
+                    <li><a href="/index.html"> Home </a></li>
+                    <li><a href="/Paginas/champions.html"> Champs</a></li>
                     <li><a href="/Paginas/builds.html">Builds</a></li>
                 </ul>
             </nav>
             <img src="/multimedia/iconos/avatar-de-usuario (1).png" alt="" class="icono_contactar">
     </header>
-    <main>
 
+    <main>
+        <img class="fondo-3" src="/multimedia/fondo-3.jpg" alt="imagen de fondo">
+       <img class="fondo-0" src="/multimedia/league of stats.png" alt="imagen superpuesta">
     </main>
+</style>
     <footer>
 
     </footer>
