--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>League Of Stats</title>
     <link rel="shortcut icon" href="/multimedia/iconos/icono jinx papuda.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -13,6 +14,10 @@
             
         </nav>
     </header>
+
+<main>
+ 
+</main>
     
 </body>
 </html>
